@@ -131,6 +131,13 @@
 		  <td>p4-ediff<br>C-x p -</td>
 		  <td>
 		    <pre>Use ediff to compare file with its original client version.</pre>
+		    <a name=diff-head></a>
+		  </td>
+		</tr>
+		<tr>
+		  <td>p4-diff-head<br></td>
+		  <td>
+		    <pre>Use diff-head to compare file (opened or unopened) with the latest revision in the depot.</pre>
 		    <a name=diff></a>
 		  </td>
 		</tr>
@@ -968,7 +975,7 @@ by examination of the file's contents and execution permission bits.
 		  </td>
 		</tr>
 	    </table>
-	    <li><h2>Hacking it</h2></li>				
+	    <li><h2>Hacking it</h2></li>
 	    <p>
 	      To hack p4.el, copy it from
 	      <code>/your/path/to/emacs/lisp</code> or visit
@@ -985,13 +992,13 @@ by examination of the file's contents and execution permission bits.
 	    <li><h2>Thanks</h2></li>
 	    <p> The perforce-emacs integration team would like to
 	    thanks Chris Patti for documenting p4.el usage in this nice
-	    document! 
+	    document!
 	</ol>
 	<hr>
 	<A href="http://sourceforge.net"> <IMG
 	src="http://sourceforge.net/sflogo.php?group_id=58201&amp;type=5"
 	width="210" height="62" border="0" alt="SourceForge Logo"></A>
 	<hr>
-	Last Updated: $Revision: 1.4 $ on $Date: 2002/07/26 20:30:17 $
+	Last Updated: $Revision: 1.5 $ on $Date: 2002/07/26 22:26:18 $
     </body>
   </html>
